# AoC

./: .rubocop.yml  .simplecov  Config  LICENSE  README.md  Rakefile  build  day1.rs  day1alt.rs  day2.rs  helper.rs  main.rs  module.mk
.cargo/: rustc.wrapper  rustc_wrapper_env
cargo-project/: Cargo.toml  input.8.txt
cargo-project/src/: day1.rs  day10.rs  day11.rs  day12.rs  day1alt.rs  day2.rs  day3.rs  day4alt.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  helper.rs  main.rs  yes good name daY 3
lib/: README.md  my_library.rb
spec/: README.md  my_library_spec.rb  my_script_spec.rb  spec_helper.rb
